# santi-link

./: .gitignore  AGENTS.md  Cargo.toml  Dockerfile
.github/workflows/: ci.yml  verify.yml
crates/api/: Cargo.toml
crates/api/src/: config.rs  lib.rs  main.rs  state.rs
crates/api/src/handlers/: health.rs  mod.rs  responses.rs
crates/api/src/models/: api_error.rs  health.rs  mod.rs
crates/provider-openai-auth/: Cargo.toml
crates/provider-openai-auth/src/: lib.rs
crates/provider-openai-auth/src/models/: auth.rs
crates/provider-openai-auth/src/services/: auth.rs
crates/provider-openai-compatible/: Cargo.toml
crates/provider-openai-compatible/src/: config.rs  lib.rs  models.rs  service.rs
docs/: architecture.md
scripts/: package.sh  release.py  release_beta.py  verify.py  verify.sh
scripts/verify/: no-skips.sh
