[package]
name = "provider-openai-auth"
version = "0.1.0-beta.1"
edition = "2021"

[dependencies]
reqwest = { version = "0.12", default-features = false, features = ["charset", "http2", "json", "macos-system-configuration", "rustls-tls"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
thiserror = "1.0"
tokio = { version = "1.0", features = ["fs", "macros", "net", "rt-multi-thread", "sync"] }
