[package]
name = "provider-openai-auth"
version = "0.1.0-beta.1"
edition = "2021"

[dependencies]
reqwest = { version = "0.13.2", default-features = false, features = ["charset", "form", "http2", "json", "rustls"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
thiserror = "2.0.18"
tokio = { version = "1.0", features = ["fs", "macros", "net", "rt-multi-thread", "sync"] }
