[package]
name = "provider-openai-compatible"
version = "0.1.0"
edition = "2021"

[dependencies]
axum = "0.7"
reqwest = { version = "0.12", default-features = false, features = ["charset", "http2", "json", "macos-system-configuration", "rustls-tls"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
thiserror = "1.0"
tracing = "0.1"
utoipa = { version = "5", features = ["axum_extras", "chrono", "uuid"] }
provider-openai-auth = { path = "../provider-openai-auth" }
