[package]
name = "provider-openai-compatible"
version = "0.1.0-beta.1"
edition = "2021"

[dependencies]
axum = "0.8.8"
reqwest = { version = "0.13.2", default-features = false, features = ["charset", "http2", "json", "rustls"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
thiserror = "2.0.18"
tracing = "0.1"
utoipa = { version = "5", features = ["axum_extras", "chrono", "uuid"] }
provider-openai-auth = { path = "../provider-openai-auth" }
